# RTTI

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.cpp
.github/workflows/: cmake-multi-platform.yml
cmake/: RTTIConfig.cmake.in
src/: Attributable.cpp  Attributable.h  Attributes.h  Config.h  CoreRuntime.cpp  CoreRuntime.h  EnumInfo.h  MethodInfo.h  Object.cpp  Object.h  ObjectBox.cpp  ObjectBox.h  PropertyInfo.h  RTTI.cpp  RTTI.h  Reflection.cpp  Reflection.h  System.h  Type.cpp  Type.h  TypeReg.h  TypeRegister.h
tests/: CMakeLists.txt  main.cpp  test.cpp
