cmake_minimum_required(VERSION 3.5)

SET(TARGET_NAME RTTI)

PROJECT(${TARGET_NAME})

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

FILE(GLOB_RECURSE RTTI_SOURCE src/*.cpp)

SET(TARGET_SOURCE ${RTTI_SOURCE})

ADD_LIBRARY(${TARGET_NAME} STATIC ${TARGET_SOURCE})

TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/src)

# for test
OPTION(RTTI_BUILD_TEST "Built RTTI Test" OFF)

IF(RTTI_BUILD_TEST)
    MESSAGE("Build RTTI Test")

    ADD_EXECUTABLE(${TARGET_NAME}-Test tests/test.cpp)

    TARGET_LINK_LIBRARIES(${TARGET_NAME}-Test ${TARGET_NAME})
ENDIF()