cmake_minimum_required(VERSION 3.5)

SET(TARGET_NAME RTTITest)

PROJECT(${TARGET_NAME})

SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_CURRENT_SOURCE_DIR}/")

FILE(GLOB_RECURSE TEST_SOURCE *.cpp)

SET(TARGET_SOURCE ${TEST_SOURCE})

ADD_EXECUTABLE(${TARGET_NAME} ${TARGET_SOURCE})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../Source)

TARGET_LINK_LIBRARIES(${TARGET_NAME} RTTI)

SET_TARGET_PROPERTIES(${TARGET_NAME}
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/${Configuration}"
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/${Configuration}"
    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/${Configuration}"
    OUTPUT_NAME ${TARGET_NAME}
    VERSION 1.0 SOVERSION 0
)